service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-service
  labels:
    app: blue-green-app
spec:
  type: ClusterIP
  selector:
    app: blue-green-app
  ports:
  - protocol: TCP
    port: 80
    name: http
