des-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: blue-green-app
spec:
  host: blue-green-app
  subsets:
  - labels: 
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
