virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-app
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
    - route:
      - destination:
          host: blue-green-app
          subset: v1
        weight: 0
      - destination:
          host: blue-green-app
          subset: v2
        weight: 100
